<resources>
    <string name="app_name">BookLibrary-Room-MVVM</string>
    <string name="add_new_book">Add New Book</string>
    <string name="update_book">Update Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="page_number">Page Number</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
</resources>